# ood-detection

./: .gitignore  README.md  benchmark.py  benchmarking_results.csv  get_benchmarking_table.py  pyproject.toml  run_benchmark.sh  utils_.py
benchmarking_results/: clinc150_ADB_bert_False_False_oos_0.75_0.01.json  clinc150_ADB_bert_False_True_oos_0.75_0.01.json  clinc150_ADB_mpnet_False_False_oos_0.75_0.01.json  clinc150_ADB_mpnet_False_True_oos_0.75_0.01.json  clinc150_ADB_use_False_False_oos_0.75_0.01.json  clinc150_ADB_use_False_True_oos_0.75_0.01.json  clinc150_BiEncoderCosine_mpnet_False_False_oos.json  clinc150_BiEncoderEntropy_mpnet_False_False_oos.json  clinc150_BiEncoderEuclidean_mpnet_False_False_oos.json  clinc150_BiEncoderLOF_mpnet_False_False_oos.json  clinc150_BiEncoderMaha_mpnet_False_False_oos.json  clinc150_BiEncoderPCACosine_mpnet_False_False_oos.json  clinc150_BiEncoderPCAEntropy_mpnet_False_False_oos.json  clinc150_BiEncoderPCAEuclidean_mpnet_False_False_oos.json  clinc150_BinaryMSP_bert_False_True_oos.json  clinc150_BinaryMSP_mpnet_False_True_oos.json  clinc150_BinaryMSP_use_False_True_oos.json  clinc150_DOC_bert-best-ckpt_True_False_oos.json  clinc150_DOC_bert-best-ckpt_True_True_oos.json  clinc150_DOC_bert_False_False_oos.json  clinc150_DOC_bert_False_True_oos.json  clinc150_DOC_mpnet-best-ckpt_True_False_oos.json  clinc150_DOC_mpnet-best-ckpt_True_True_oos.json  clinc150_DOC_mpnet_False_False_oos.json  clinc150_DOC_mpnet_False_True_oos.json  clinc150_DOC_use-best-ckpt_True_False_oos.json  clinc150_DOC_use-best-ckpt_True_True_oos.json  (+223 more)
(+74 files in other folders)
