[tool.poetry]
name = "ood-detection"
version = "0.1.0"
description = ""
authors = ["Louis Owen <louis.owen@yellow.ai>"]
readme = "README.md"
packages = [{include = "ood_detection"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^2.0.1"
numpy = "^1.22"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
optuna = "^3.1.1"
tqdm = "^4.65.0"
tensorflow-addons = "^0.20.0"
matplotlib = "^3.7.1"
tensorflow-hub = "^0.13.0"
sentence-transformers = "^2.2.2"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
